# directx-testbed

./: .gitignore  CMakeLists.txt  GenerateProject.bat  LICENSE  README.md  generate-project.bat
Source/Examples/DummySketch/: CMakeLists.txt  DummySketch.cpp  SketchApp.cpp
Source/Examples/GraphicsSamples/DemoBlob/: CMakeLists.txt  SketchApp.cpp
Source/Examples/GraphicsSamples/DemoBlob/Shaders/: Shaders.hlsl
Source/Examples/GraphicsSamples/Fullscreen/: CMakeLists.txt  SketchApp.cpp
Source/Examples/GraphicsSamples/HelloConstantBuffer/: CMakeLists.txt  SketchApp.cpp
Source/Examples/GraphicsSamples/HelloFrameBuffering/: CMakeLists.txt  SketchApp.cpp
Source/Examples/GraphicsSamples/HelloFullscreen/: CMakeLists.txt  SketchApp.cpp
Source/Examples/GraphicsSamples/HelloQuad/: CMakeLists.txt  SketchApp.cpp
Source/Examples/GraphicsSamples/HelloShaderCompilation/: CMakeLists.txt  SketchApp.cpp
Source/Examples/GraphicsSamples/HelloSync/: CMakeLists.txt  SketchApp.cpp
Source/Examples/GraphicsSamples/HelloTriangle/: CMakeLists.txt  SketchApp.cpp
Source/Examples/GraphicsSamples/HelloVertexBuffer/: CMakeLists.txt  SketchApp.cpp
Source/Examples/GraphicsSamples/HelloWorld/: CMakeLists.txt  SketchApp.cpp
Source/Examples/IntroductionTo3DGameProgramming/Ch04/Initialization/: CMakeLists.txt  SketchApp.cpp
Source/Launcher/: CMakeLists.txt  Launcher.cpp  Launcher.h
Source/Sketch/: CMakeLists.txt  DummySketch.cpp  Sketch.cpp  Sketch.h  SketchBase.cpp  SketchBase.h
engine/: CMakeLists.txt
engine/src/: launcher.cpp  launcher.h  sketch-base.cpp  sketch-base.h
examples/dummy-sketch/: CMakeLists.txt
examples/dummy-sketch/src/: main.cpp
